--- a/carts/templates/carts/includes/included_cart.html
+++ b/carts/templates/carts/includes/included_cart.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <div class="card mb-3 text-bg-light shadow-lg">
     {% for cart in carts %}
         <div class="card-header">
@@ -10,13 +11,18 @@
                     <div class="col p-0">
                         <div class="input-group">
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-dark btn-sm decrement" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url 'cart:cart_change' %}">
+                                <button type="button" class="btn btn-dark btn-sm decrement"
+                                    data-cart-id="{{ cart.id }}"
+                                    data-cart-change-url="{% url "cart:cart_change" %}">
                                     {% csrf_token %}
                                     -</button>
                             </span>
-                            <input type="text" class="form-control number" value="{{ cart.quantity }}" readonly>
+                            <input type="text" class="form-control number" value="{{ cart.quantity }}"
+                                readonly>
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-dark btn-sm increment" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url 'cart:cart_change' %}">
+                                <button type="button" class="btn btn-dark btn-sm increment"
+                                    data-cart-id="{{ cart.id }}"
+                                    data-cart-change-url="{% url "cart:cart_change" %}">
                                     {% csrf_token %}
                                     +</button>
                             </span>
@@ -25,11 +31,13 @@
                     <div class="col p-0">
                         <p>x {{ cart.product.sell_price }} = </p>
                     </div>
-                    <div class="col p-0"><strong>{{ cart.products_price }} грн</strong></div>
+                    <div class="col p-0"><strong> {{cart.products_price}} грн</strong></div>
                     <div class="col p-0">
-                        <a href="{% url 'cart:cart_remove' %}" class="remove-from-cart" data-cart-id="{{ cart.id }}">
+                        <a href="{% url "cart:cart_remove" %}" class="remove-from-cart"
+                        data-cart-id="{{ cart.id }}">
                             {% csrf_token %}
-                            <img class="mx-1" src="{% static "deps/icons/trash3-fill.svg" %}" alt="Catalog Icon" width="16" height="16">
+                            <img class="mx-1" src="{% static "deps/icons/trash3-fill.svg" %}"
+                                alt="Catalog Icon" width="16" height="16">
                         </a>
                     </div>
                 </div>
@@ -39,7 +47,12 @@
 </div>
 <div class="card mb-3 shadow-lg">
     <div class="card-footer">
-        <p class="float-left">Всього товарів на суму</p>
+        <p class="float-left">Разом <strong>{{ carts.total_quantity }}</strong> товар(а) на суму</p>
         <h4 class="float-left"><strong>{{ carts.total_price }} грн</strong></h4>
     </div>
 </div>
+{% if carts and not order %}
+<a class="btn btn-dark" href="{% url "orders:create_order" %}">
+    Оформити замовлення
+</a>
+{% endif %}
