--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -56,6 +56,12 @@ body {
     margin-bottom: 10px;
     }
 
+.accordion-body {
+    margin: 0!important;
+    padding: 0!important;
+
+}
+
 
 .title-info {
     text-align: center;
